fixed on mobile

--- a/wp-content/themes/rubicon/style-global.css
+++ b/wp-content/themes/rubicon/style-global.css
@@ -2106,8 +2106,9 @@ h1 {
   min-height: auto;
   visibility: visible !important;
 }
+.picture_border {min-height: auto;}
 
-} /* 800 */
+} /* 700 */
 
 @media screen and (max-width: 740px) {
 	
